apps/v0/run/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
    hasuraService: custom
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: nginx:1.25.1
        imagePullPolicy: IfNotPresent
        name: hello-world
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources: {}
