apps/v0/run/hello-world/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: hello-world
  type: ClusterIP
